--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -157,6 +157,12 @@
   .ml-30 {
     margin-left: 0.3rem;
   }
+  .mr-30 {
+    margin-right: 0.3rem;
+  }
+  .m-30 {
+    margin: 0.3rem;
+  }
   .mb-24 {
     margin-bottom: 0.24rem;
   }
@@ -222,6 +228,9 @@
   }
   .pb-30 {
     padding-bottom: 0.3rem;
+  }
+  .p-30 {
+    padding: 0.3rem;
   }
   .pt-24 {
     padding-top: 0.24rem;
