--- a/src/components/ZyHome/css/header.less
+++ b/src/components/ZyHome/css/header.less
@@ -7,6 +7,10 @@
   background-clip: content-box;
   .title_wrap {
     padding: 0.3rem;
+    padding-top: 0.4rem;
+    p {
+      line-height: 0.48rem;
+    }
     .title {
       font-size: 0.35rem;
       color: #fff;
