--- a/src/components/ZyHome/css/zyhome.less
+++ b/src/components/ZyHome/css/zyhome.less
@@ -1,4 +1,5 @@
 .zyhome {
+  padding-bottom: 1.2rem;
   section {
     background-color: #fff;
   }
@@ -217,7 +218,7 @@
 
     .listline {
       height: 1px;
-      width: 100%;
+      // width: 100%;
       background: #e5e5e5;
       margin-left: 0.24rem;
     }
@@ -411,14 +412,17 @@
     .title {
       font-size: 0.2rem;
       color: #999999;
+      line-height: 0.32rem;
     }
     .desc {
       font-size: 0.28rem;
       color: #333333;
+      line-height: 0.38rem;
     }
     .time {
       font-size: 0.18rem;
       color: #c8c8c8;
+      line-height: 0.32rem;
     }
   }
 }
