基金页面模块开发

--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -35,6 +35,7 @@
   input {
     outline: none;
     color: #333333;
+    border: 0;
   }
   main {
     display: block;
@@ -126,6 +127,15 @@
   }
   .flex-1 {
     flex: 1;
+  }
+  .flex-2 {
+    flex: 2;
+  }
+  .flex-3 {
+    flex: 3;
+  }
+  .flex-4 {
+    flex: 4;
   }
   .ta-c {
     text-align: center;
