--- a/src/components/ZyFund/ZyFund.less
+++ b/src/components/ZyFund/ZyFund.less
@@ -1,4 +1,5 @@
 .zyfund {
+  padding-bottom: 1.2rem;
   .header {
     width: 100%;
     height: 2.4rem;
@@ -93,29 +94,11 @@
         // }
       }
     }
-  }
-  :global {
+
     .new-funds {
       background: #fff;
-      margin-top: 0.28rem;
-      .hot-investment {
-        width: 100%;
-        height: 0.7rem;
-        border-bottom: 1px #e5e5e5 solid;
-        line-height: 0.7rem;
-        .title {
-          font-family: PingFangSC-Medium;
-          color: #333333;
-          font-size: 0.3rem;
-          margin-left: 0.3rem;
-        }
-        .arrow {
-          width: 0.16rem;
-          height: 0.26rem;
-          float: right;
-          margin: 0.2rem 0.4rem 0 0;
-        }
-      }
+      padding-top: 0.3rem;
+
       .new-fund {
         ul {
           li {
@@ -176,6 +159,196 @@
           }
         }
       }
+    }
+
+    .hot-funds {
+      background: #fff;
+      padding-top: 0.2rem;
+      .hot-fund {
+        ul {
+          li {
+            width: 6.93rem;
+            height: 1.42rem;
+            margin: 0.3rem 0.3rem 0rem 0.31rem;
+            border-bottom: 1px #e5e5e5 solid;
+            &:last-child {
+              border-bottom: none;
+            }
+            .rateDiv {
+              max-width: 1.7rem;
+            }
+            .rateInfo {
+              font-family: PingFangSC-Semibold;
+              color: #d51b1b;
+              font-size: 0.4rem;
+              text-align: left;
+              margin-top: 0.15rem;
+            }
+
+            .rateTip {
+              color: #999999;
+              font-size: 0.24rem;
+              text-align: left;
+            }
+
+            .middleTop {
+              font-family: PingFangSC-Medium;
+              color: #282828;
+              font-size: 0.32rem;
+              height: 0.38rem;
+              position: absolute;
+              max-width: 4.1rem;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
+            }
+
+            .middleCenter {
+              padding-top: 0.4rem;
+              color: #999999;
+              font-size: 0.24rem;
+              margin-top: 0.1rem;
+              text-align: left;
+              display: inline-block;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
+              max-width: 3.5rem;
+            }
+
+            .middleBottom {
+              color: #4f77e6;
+              font-size: 0.24rem;
+              margin-top: 0.1rem;
+              margin-bottom: 0.1rem;
+              text-align: left;
+            }
+            .fund-checked {
+              width: 0.3rem;
+              height: 0.3rem;
+              /* margin-left: 1.25rem; */
+              margin-bottom: 0.2rem;
+            }
+            .button {
+              height: 0.52rem;
+              width: 1.4rem;
+              background-image: linear-gradient(
+                70deg,
+                #fd793b 0%,
+                #ffa34b 100%
+              );
+              border-radius: 6px;
+              padding: 0.1rem 0.3rem;
+              color: #ffffff;
+              font-size: 0.24rem;
+              float: right;
+              text-align: center;
+            }
+          }
+        }
+      }
+    }
+    .theme-funds {
+      background-color: #fff;
+      margin-top: 0.2rem;
+      .caro-wrap {
+        margin: 0.25rem 0.3rem 0;
+        width: 6.9rem;
+        .caro-img {
+          width: 6.9rem;
+          height: 2rem;
+          img {
+            width: 6.9rem;
+            height: 2rem;
+          }
+        }
+      }
+      .theme-fund {
+        padding: 0.3rem 0.3rem 0.5rem;
+        ul {
+          height: 2.2rem;
+          display: flex;
+          // justify-content: space-between;
+          li {
+            display: block;
+            border: solid #e5e5e5 0.015rem;
+            border-radius: 0.1rem;
+            height: 100%;
+            width: 2.2rem;
+            margin-right: 0.15rem;
+            &:last-child {
+              margin-right: 0;
+            }
+            .theme-funds-list {
+              height: 2.2rem;
+              .code {
+                font-size: 0.22rem;
+                color: #999999;
+                text-align: center;
+              }
+              .name {
+                font-size: 0.28rem;
+                color: #333333;
+                text-align: center;
+                margin: 0.13rem auto;
+                line-height: 0.4rem;
+                padding: 0 0.1rem;
+              }
+              .percent {
+                font-size: 0.4rem;
+                color: #d51b1b;
+                text-align: center;
+                margin: 0.1rem auto;
+              }
+              .tips {
+                font-size: 0.22rem;
+                color: #969696;
+                text-align: center;
+              }
+              .divide {
+                height: 0.2rem;
+                background: #f8f8f8;
+              }
+              .icon-info {
+                background: #e5e5e5;
+                height: 0.5rem;
+                width: 1px;
+                float: right;
+                margin-top: 0.2rem;
+              }
+            }
+          }
+
+          .tf {
+            text-align: center;
+          }
+        }
+      }
+    }
+    .new-funds,
+    .hot-funds,
+    .theme-funds {
+      .hot-investment {
+        width: 100%;
+        height: 0.72rem;
+        border-bottom: 1px #e5e5e5 solid;
+        line-height: 0.7rem;
+        .title {
+          font-family: PingFangSC-Medium;
+          color: #333333;
+          font-size: 0.3rem;
+          margin-left: 0.3rem;
+        }
+        .arrow {
+          width: 0.16rem;
+          height: 0.26rem;
+          float: right;
+          margin: 0.2rem 0.4rem 0 0;
+        }
+      }
+    }
+    .green {
+      color: #4ea974 !important;
     }
   }
 }
