我的页面开发完成

--- a/src/components/ZyMine/zyMine.less
+++ b/src/components/ZyMine/zyMine.less
@@ -41,6 +41,15 @@
           width: 0.16rem;
           height: 0.26rem;
         }
+        .login {
+          width: 2.05rem;
+          height: 0.56rem;
+          text-align: center;
+          border: 1px solid #d51b1b;
+          border-radius: 0.28rem;
+          line-height: 0.56rem;
+          color: #d51b1b;
+        }
       }
       .navdiv {
         height: 1.21rem;
@@ -66,6 +75,44 @@
             line-height: 1.2rem;
             font-size: 0.28rem;
             color: #333333;
+          }
+        }
+      }
+    }
+    .list {
+      .outer-list {
+        margin: 0.3rem 0.3rem 0;
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 2px 8px 0 #c8c8c8;
+        .inner-list {
+          height: 0.82rem;
+          margin: 0 0.3rem;
+          align-items: center;
+          border-bottom: 1px solid #e5e5e5;
+          .icon-img {
+            width: 0.3rem;
+            height: 0.3rem;
+          }
+          .right-img {
+            width: 0.16rem;
+            height: 0.26rem;
+          }
+          .center-title {
+            padding-left: 0.16rem;
+            line-height: 0.8rem;
+            font-size: 0.3rem;
+            color: #333;
+          }
+          .right-code {
+            width: 0.4rem;
+            height: 0.4rem;
+            margin-right: 0.2rem;
+          }
+          .right-tips {
+            font-size: 0.24rem;
+            color: #daaa3b;
+            margin-right: 0.2rem;
           }
         }
       }
